Support adding more missiong resources
Changes:
- Console refill command supports adding ItemResources as well as AmoutnResources
- Construction panel in mission tool shows the type of material needed
-

Ref: #1642